--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Shopping Lists",
-  "name": "My Shopping Lists",
+  "name": "Shopping Lists",
   "start_url": ".",
   "display": "standalone",
   "theme_color": "#000000",
