--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "animate.css": "^4.1.1",
     "bootstrap": "^5.1.3",
+    "cleave.js": "^1.6.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.0",
-    "react-telephone-input": "^5.0.0",
+    "react-use-websocket": "^2.9.1",
     "web-vitals": "^2.1.2"
   },
   "scripts": {
